# liuyao_desktop_tauri2

./: .gitignore  .taurignore  README.md  cc.md  complete-setup-guide.md  components.d.ts  package.json  pnpm-lock.yaml  release_steps.md  sync-test-2025-06-28_19-23-25.txt  sync-test-20250628-191545.md  sync-test-20250628-191915.md  test-sync.md  vite.config.ts  编译绿色版.bat
.cursor/rules/: cc.mdc  ccc.mdc
.github/workflows/: release.yml  sync-to-gitee.yml
0bak/: release macos linux  windows ymlbak
src/: App copy.vue  App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-portable-ci.ps1  build-portable.ps1  run.bat
src-tauri/src/: lib.rs  main.rs  proxy_server.rs  read_system_proxy.rs
src/components/: MainContent.vue  NavBar.vue  ProxySettingsPopover.vue  Settings.vue
src/store/: useProxyStore.ts
src/types/: proxy.ts  wails.d.ts
src/utils/: eventBus.ts
~/.cargo/: config.toml
