[package]
name = "liuyao_desktop_tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "liuyao_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.6.1", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
once_cell = "1.19.0"
# 新增：代理相关依赖
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-socks = "0.5.1"
url = "2.3.1"
base64 = "0.22.1"
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

